syntax = "proto3";
package cosmatics;

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/refractedlabs/cosmatics/types";

enum MetricType {
  option (gogoproto.goproto_enum_prefix) = false;
  ANY = 0 [(gogoproto.enumvalue_customname) = "METRIC_TYPE_ANY"];
  LST = 1 [(gogoproto.enumvalue_customname) = "METRIC_TYPE_LISTENER"];
  FTC = 2 [(gogoproto.enumvalue_customname) = "METRIC_TYPE_FETCHER"];
  PRC = 3 [(gogoproto.enumvalue_customname) = "METRIC_TYPE_PROCESSOR"];
  PPR = 4 [(gogoproto.enumvalue_customname) = "METRIC_TYPE_POST_PROCESSOR"];
  BG = 5 [(gogoproto.enumvalue_customname) = "METRIC_TYPE_BACKGROUND_TASK"];
}

message Metric {
  string id = 1;
  MetricType type = 2;
  repeated string tags = 3;
  google.protobuf.Timestamp block_time = 4 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
  int64 block_height = 5;
  google.protobuf.Timestamp time = 6 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
  double value = 7;
}